--- a/rs/nervous_system/agent/BUILD.bazel
+++ b/rs/nervous_system/agent/BUILD.bazel
@@ -6,10 +6,13 @@ DEPENDENCIES = [
     # Keep sorted.
     "//packages/pocket-ic",
     "//rs/nervous_system/clients",
+    "//rs/nns/common",
     "//rs/nns/constants",
+    "//rs/nns/governance/api",
     "//rs/nns/sns-wasm",
     "//rs/sns/governance",
     "//rs/sns/root",
+    "//rs/sns/swap",
     "//rs/types/base_types",
     "@crate_index//:anyhow",
     "@crate_index//:candid",
