--- a/rs/sns/audit/Cargo.toml
+++ b/rs/sns/audit/Cargo.toml
@@ -15,10 +15,13 @@ name = "ic_sns_audit"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = { workspace = true }
 candid = { workspace = true }
 colored = "2.0.0"
 csv = "1.1"
 ic-agent = { workspace = true }
+ic-base-types = { path = "../../types/base_types" }
+ic-nervous-system-agent = { path = "../../nervous_system/agent" }
 ic-nervous-system-common-test-keys = { path = "../../nervous_system/common/test_keys" }
 ic-neurons-fund = { path = "../../nervous_system/neurons_fund" }
 ic-nns-common = { path = "../../nns/common" }
@@ -30,4 +33,5 @@ rust_decimal = { version = "1.25" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 textplots = { version = "0.8" }
+thiserror = { workspace = true }
 tokio = { workspace = true }
