--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -18,7 +18,7 @@ permissions: read-all
 env:
   CI_COMMIT_SHA: ${{ github.sha }}
   CI_JOB_NAME: ${{ github.job }}
-  CI_JOB_ID: ${{ github.run_id }}
+  CI_RUN_ID: ${{ github.run_id }}
   CI_JOB_URL: "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
   CI_PIPELINE_SOURCE: ${{ github.event_name }}
   CI_PROJECT_DIR: ${{ github.workspace }}
@@ -173,7 +173,7 @@ jobs:
           BAZEL_CI_CONFIG: "--config=ci --config macos_ci"
           BAZEL_COMMAND: test
           BAZEL_EXTRA_ARGS: '--test_tag_filters=test_macos'
-          BAZEL_STARTUP_ARGS: "--output_base /var/tmp/bazel-output/${CI_JOB_ID}"
+          BAZEL_STARTUP_ARGS: "--output_base /var/tmp/bazel-output/${CI_RUN_ID}"
           BAZEL_TARGETS: "//rs/... //publish/binaries/..."
           HONEYCOMB_API_TOKEN: ${{ secrets.HONEYCOMB_API_TOKEN }}
       - name: Upload bazel-bep
@@ -334,12 +334,12 @@ jobs:
         run: |
           set -eExuo pipefail
           REPO_NAME="${GITHUB_REPOSITORY##*/}"
-          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}"
-          mkdir -p "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}/artifacts"
-          ln -s "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}/artifacts" /__w/$REPO_NAME/$REPO_NAME/artifacts
-          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
+          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_RUN_ID}"
+          mkdir -p "/cache/job/${CI_JOB_NAME}/${CI_RUN_ID}/artifacts"
+          ln -s "/cache/job/${CI_JOB_NAME}/${CI_RUN_ID}/artifacts" /__w/$REPO_NAME/$REPO_NAME/artifacts
+          buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
               "$CI_PROJECT_DIR"/ci/scripts/run-build-ic.sh
-          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_JOB_ID}"
+          rm -rf "/cache/job/${CI_JOB_NAME}/${CI_RUN_ID}"
         env:
           BAZEL_COMMAND: "build"
           RUN_ON_DIFF_ONLY: ${{ !contains(github.event.pull_request.labels.*.name, 'CI_ALL_BAZEL_TARGETS') }}
@@ -440,7 +440,7 @@ jobs:
         shell: bash
         run: |
           set -eExuo pipefail
-          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
+          buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
               "$CI_PROJECT_DIR"/ci/scripts/rust-lint.sh
   cargo-build-release-linux:
     name: Cargo Build Release Linux
@@ -477,5 +477,5 @@ jobs:
         shell: bash
         run: |
           set -eExuo pipefail
-          buildevents cmd "$CI_JOB_ID" "$CI_JOB_NAME" build-command -- \
+          buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
               cargo build --release
