--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -158,7 +158,7 @@ jobs:
     timeout-minutes: 120
     runs-on:
       labels: macOS
-    if: ${{ github.ref_protected }} # Bazel test darwin are still required for building artifacts for the releases, therefore run on protected branches
+    if: ${{ github.ref_protected && github.repository == 'ic' }} # Run on protected branches, but only on public repo
     steps:
       - <<: *checkout
       - name: Set PATH
