--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -12,8 +12,8 @@ concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
 
-# Skip the workflow if the branch is a hotfix branch and it is running on ic-private
-if: ${{ !(startsWith(github.ref, 'refs/heads/hotfix-') && github.repository != 'ic') }}
+# Skip the workflow if the branch is an rc branch and it is running on ic-private
+if: ${{ !(github.repository == 'ic' || !startsWith(github.ref, 'refs/heads/rc--')) }}
 
 env:
   CI_COMMIT_SHA: ${{ github.sha }}
