feat(ICP-Ledger): FI-1508 add icp allowance getter endpoint
- Introduced the `allowance` endpoint to the ICP ledger canister
that fetches an allowance given `AccountIdentifier`s.
It's only available in test wasm and not exposed through the candid
interface.

- Refactored Bazel configuration by moving shared canister setup to
`ledger_canisters.bzl`

- Added tests to make sure the new endpoint works if and only if it's
running from a test wasm.

--- a/rs/ledger_suite/icp/ledger/Cargo.toml
+++ b/rs/ledger_suite/icp/ledger/Cargo.toml
@@ -51,4 +51,5 @@ ic-test-utilities-load-wasm = { path = "../../../test_utilities/load_wasm" }
 
 [features]
 notify-method = []
+icp-allowance-getter = []
 upgrade-to-memory-manager = []
