--- a/ic-os/components/monitoring/filebeat/filebeat.service
+++ b/ic-os/components/monitoring/filebeat/filebeat.service
@@ -10,15 +10,13 @@ Wants=bootstrap-ic-node.service
 # We must wait for var to be mounted over before interacting with it
 After=var.mount
 Wants=var.mount
-# Only start Filebeat if configuration file exists
-ConditionPathExists=/boot/config/filebeat.conf
 
 [Service]
 User=filebeat
 Group=filebeat
 Environment="GODEBUG='madvdontneed=1'"
 ExecStartPre=+/opt/ic/bin/setup-filebeat-permissions.sh
-ExecStartPre=+/opt/ic/bin/generate-filebeat-config.sh -j /boot/config/filebeat.conf -i /etc/filebeat/filebeat.yml.template -o /run/ic-node/etc/filebeat/filebeat.yml
+ExecStartPre=+/opt/ic/bin/generate-filebeat-config.sh -i /etc/filebeat/filebeat.yml.template -o /run/ic-node/etc/filebeat/filebeat.yml
 ExecStart=/usr/local/bin/filebeat --environment systemd -e --path.home /var/lib/filebeat --path.config /run/ic-node/etc/filebeat --path.data /var/lib/filebeat --path.logs /var/log/filebeat
 Restart=always
 
