--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -413,8 +413,8 @@ jobs:
       - name: Upload COV report
         shell: bash
         run: |
-          rclone sync cov_html s3:dfinity-download-public/coverage/${CI_COMMIT_SHA}/ \
-              --s3-env-auth --progress
+          rclone sync cov_html public-s3:dfinity-download-public/coverage/${CI_COMMIT_SHA}/ \
+              --progress
       - name: Upload Test Coverage Report
         uses: actions/upload-artifact@v4
         with:
