--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -414,7 +414,7 @@ jobs:
         shell: bash
         run: |
           rclone sync cov_html public-s3://dfinity-download-public/coverage/${CI_COMMIT_SHA}/ \
-              --progress --s3-env-auth
+              --progress --s3-env-auth --config .rclone.conf
       - name: Upload Test Coverage Report
         uses: actions/upload-artifact@v4
         with:
