--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -403,13 +403,7 @@ jobs:
         run: |
           # ./ci/scripts/bazel-coverage.sh
           mkdir -p cov_html/
-          echo test >cov_html/test.txt
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@v4
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: eu-central-1
+          echo test >cov_html/index.html
       - name: Upload COV report
         shell: bash
         run: |
